--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 data/
 
-data/glove.840B.300d.txt
+!data/build_glove.py
+!data/build_vocab.py
+!data/canary_insertion.py
+!data/example
+
 
 model/results*
